public/stylings/GeekStyling.css
* {
    border: 0;
    margin: 0;
    padding: 0;
}

html {
    scrollbar-width: none;
    overflow: -moz-scrollbars-none;
    -ms-overflow-style: none;
    scroll-behavior: auto;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
  }

body {
    font-family: "open-sans";
}

#container {
    /* background-image: url("../images/backgrounds/geekWall.jpg"); */
    background-position: center;
    background-size: cover;
}

#window {
    position: relative;
    width: 100vw;
    height: 100vh;
    background-color: #1a1a1a;
    display: flex;
    flex-direction: column;
    font-size: 20px;
}

#titleBar {
    width: 100vw;
    height: 6vh;
    background-color: rgb(17, 17, 17);
    color: #fff;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#titleName {
    margin: auto;
}

#groupInfo {
    color: #fff;
    margin-left: 5px;
}

#terminalArea {
    padding: 5px;
    width: fit-content;
    height: max-content;
    color: rgb(6, 187, 6);
    display: flex;
    flex-direction: column;
}
.commandInstance {
    display: block;
}

.access {
    display: flex;
    flex-direction: row;
}

.accessName {
    font-weight: bold;
}

.accessIndicator {
    color: rgb(79, 79, 228);
}

.commandSlot {
    background-color: #00000000;
}

.app-control {
    color: #fff;
    width: 150%;
    padding-left: 10px;
    background-color: #00000000;
    outline: none;
    caret-color: aliceblue;
}

input {
    font-size: 20px;
    min-width: 40vw;
    background-color: white;
    width: max-content;
    min-width: 30vw;
}

.commandStore {
    padding-left: 10px;
    display: none;
    font-size: 20px;
    color: white;
}

.commandOutput {
    padding-top: 10px;
    padding-left: 5px;
    color: #fff;
    max-width: 90%;
    line-height: 25px;
}

.file {
    color: #2196f3;
}

@media screen and (max-width: 1000px) {
    #window {
        width: 100vw;
        height: 100vh;
        font-size: 40px;
        overflow: hidden;
        border-radius: 0px;
        background-color: #000;
    }

    input {
        font-size: 40px;
    }

    .navButtns {
        font-size: 60px;
        padding-right: 80px;
    }
}

